[gd_scene load_steps=5 format=3 uid="uid://deqxoltweu4dr"]

[ext_resource type="Texture2D" uid="uid://7nhu4lxoftiv" path="res://icon.svg" id="1_e03jc"]
[ext_resource type="Theme" uid="uid://dbyhq001le5s3" path="res://resources/themes/quest_card_theme.tres" id="1_hqtl5"]
[ext_resource type="Script" uid="uid://ceborvsrqbg1o" path="res://scenes/adventurer_card/adventurer_card.gd" id="1_ki8dq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ki8dq"]
size = Vector2(120, 120)

[node name="AdventurerCard" type="Button"]
process_mode = 3
custom_minimum_size = Vector2(240, 240)
offset_right = 240.0
offset_bottom = 240.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme = ExtResource("1_hqtl5")
script = ExtResource("1_ki8dq")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(120, 120)
collision_layer = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_ki8dq")

[node name="MarginContainer" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("1_e03jc")
expand_mode = 1
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[center]Adventurer

Atk:A  Def:A  Mag:A  Res:A  Spd:A  Luk:A
[/center]"
fit_content = true
scroll_active = false

[node name="EmojiIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_right = 25.0
grow_horizontal = 2
grow_vertical = 0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_area_exited"]
